# CrediMax

./: .dockerignore  .gitignore  README.md  app.py  docker-compose.yml  prefect.yaml  pyproject.toml  test.py
.github/workflows/: build_api.yml  build_trainer.yml  deploy.yml  test.yml  weekly_train.yml
artifacts/: credit_risk_pipeline.joblib
configs/: config.yaml  data.yaml
credit_risk_mlops/api/: server.py
credit_risk_mlops/api/static/: app.js
credit_risk_mlops/api/templates/: index.html
credit_risk_mlops/data/: load_data.py  preprocess.py  split.py
credit_risk_mlops/models/: register.py  train.py
credit_risk_mlops/pipelines/: train_flow.py
docker/: api.Dockerfile  docker-compose.yml  train.Dockerfile
mlruns/0/: meta.yaml
notebooks/: credit-risk-prediction-using-xgboost-90-f1.ipynb
scripts/: start_api.sh  start_train.sh
src/api/: server.py
src/api/static/: styles.css
src/api/templates/: index.html
src/data/: load_data.py  preprocess.py  split.py
src/models/: __init__.py  evaluate.py  predict.py  train.py
src/pipelines/: train_flow.py
src/pipelines/deployments/: train_deployment.py
