[project]
name = "credit-risk-mlops"
version = "0.1.0"
description = ""
authors = [
    {name = "DeepActionPotential",email = "islamtarek2482@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"

dependencies = [
    "mlflow (>=3.6.0,<4.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "prefect (>=3.6.1,<4.0.0)",
    "xgboost (>=3.1.1,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "fastapi (>=0.121.2,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
